[package]
name = "bitrange"
version = "0.2.0"
authors = ["Victor Koenders <victor.koenders@gmail.com>"]
description = "Simple plugin to map bits in integer values to fields"
license = "MIT"
readme = "readme.md"
documentation = "https://trangar.github.io/doc/bitrange/index.html"
repository = "https://github.com/trangar/bitrange"
autobins = false

[features]
default = ["std"]
panic = []
std = []

[[bin]]
name = "test"
path = "src/bin/test.rs"

[dependencies]
bitrange_plugin = { path = "bitrange_plugin" } # "0.1.2"

