[package]
name = "bitrange_plugin"
version = "0.3.0"
edition = "2021"
authors = ["Victor Koenders"]
description = "Compiler plugin for bitrange to parse formats"
license = "MIT"
readme = "../readme.md"
documentation = "https://trangar.github.io/doc/bitrange_plugin/index.html"
repository = "https://github.com/trangar/bitrange"

[lib]
name = "bitrange_plugin"
proc-macro = true

[dependencies]
syn = "1.0"
quote = "1.0"
proc-macro2 = "1.0"
